# ChangeLog for dev-libs/json-c
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/json-c/ChangeLog,v 1.30 2013/11/24 10:56:48 mgorny Exp $

*json-c-0.11-r1 (24 Nov 2013)

  24 Nov 2013; Michał Górny <mgorny@gentoo.org> +json-c-0.11-r1.ebuild:
  Enable multilib support, bug #488272.

  09 May 2013; Mike Frysinger <vapier@gentoo.org> json-c-0.10-r1.ebuild,
  json-c-0.11.ebuild, json-c-0.9-r1.ebuild:
  Spread the s390 love #468972 by Patrick Lauer.

  29 Apr 2013; Markos Chandras <hwoarang@gentoo.org>
  +files/json-c-0.10-automake-1.13.patch, json-c-0.10-r1.ebuild:
  Backport upstream patch for automake-1.13 to json-c-0.10. Bug #466960

*json-c-0.11 (25 Apr 2013)

  25 Apr 2013; Markos Chandras <hwoarang@gentoo.org> +json-c-0.11.ebuild:
  Version bump. Fixes #464616 and #466960

  04 Apr 2013; Mike Gilbert <floppym@gentoo.org> json-c-0.9-r1.ebuild:
  Update blocker; newer jsoncpp does not collide. Bug 462434.

  01 Feb 2013; Tim Harder <radhermit@gentoo.org> -json-c-0.10.ebuild:
  Remove old.

*json-c-0.10-r1 (01 Feb 2013)

  01 Feb 2013; Tim Harder <radhermit@gentoo.org> +json-c-0.10-r1.ebuild:
  Revision bump to add header directory compatibility symlink for pkgs not
  using pkgconfig.

*json-c-0.10 (28 Jan 2013)

  28 Jan 2013; Justin Lecher <jlec@gentoo.org> json-c-0.9.ebuild,
  json-c-0.9-r1.ebuild, +json-c-0.10.ebuild, +files/json-c-0.10-flags.patch,
  +files/json-c-0.10-headers.patch, metadata.xml:
  Version Bump, #454372; all patches prepared by radhermit (Tim Harder); moves
  header out of the way to fix collision with jsoncpp, 452234

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> json-c-0.9-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #418745

  14 Jun 2012; Jeroen Roovers <jer@gentoo.org> json-c-0.9-r1.ebuild:
  Stable for HPPA (bug #418745).

  07 Jun 2012; Brent Baude <ranger@gentoo.org> json-c-0.9-r1.ebuild:
  Marking json-c-0.9-r1 ppc for bug 418745
