@@ -4,9 +4,9 @@ DESCRIPTION=A JSON implementation in C
 EAPI=5
 HOMEPAGE=https://github.com/json-c/json-c/wiki
 IUSE=doc static-libs
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos
+KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos
 LICENSE=MIT
 SLOT=0/0
 SRC_URI=https://s3.amazonaws.com/json-c_releases/releases/json-c-0.11.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	5932e418cf62147cad2d902718aacc56	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=a4cc1684267acc4bc2d0055ef1a18b3e
+_md5_=5ce0a3ef742fb97859d87a4cc662ab65
