@@ -1,6 +1,6 @@
 DEFINED_PHASES=-
 DESCRIPTION=Virtual for perl-core/Exporter
-KEYWORDS=~x86 ~amd64
-RDEPEND=|| ( ( ~dev-lang/perl-5.17.11 !perl-core/Exporter ) ~perl-core/Exporter-5.680.0 )
+KEYWORDS=~amd64 ~x86
+RDEPEND=|| ( ( >=dev-lang/perl-5.17.11 <=dev-lang/perl-5.19.2 !perl-core/Exporter ) ~perl-core/Exporter-5.680.0 )
 SLOT=0
-_md5_=b19ba6a7997a5930efd696a338afc7f2
+_md5_=ffb350cc3d4b4863d99532fd3ba57116
