@@ -1,3 +1,15 @@
-EBUILD perl-Exporter-5.680.0.ebuild 471 SHA256 054302870daa71c7d01529f5fb6b813708811a339cb86be01bf299ac350e28b4 SHA512 95b1bb0140f065108674d2bd2f076a95ad5352fe6980df8969dc8a4fb0a6bcdfabd852dc8c68942449c021b0f17611d765fc21a41c02035c80d2fac8a7e19efd WHIRLPOOL a957ab15aad541417d0035f8cac2916c2f9cdf036a4ac9922be97274814173b39de60f4f88885702f239bd25fa1d29acd44222f8e564dd4096b3bd1197e1cef0
-MISC ChangeLog 392 SHA256 3a439bc9feb615f1ac5caf475eed22f83fcb938dc245b738894c2dd81db6f0ed SHA512 c5e589775ff448768560c7cd5b03117cbc307b06d1680bd5421365e7fe137f415d695c7d4baab3a3d1b701d07d11d6c5605f3c6661751dc5a8a1728807508a0a WHIRLPOOL 58b191fc8bd94d5f8a6e70a2f41d4cdb5a02646e04f3f01587ce3cb53a31b9eba87cdd7f21c8a80766f7fc6d7cd9515b3ddea4938c133c07fe3aafa3b1f1ec0c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD perl-Exporter-5.680.0.ebuild 498 SHA256 b1de5b7a7e8fe3282992fac92eefdaef60fc8d1e1d4a04e0df6dbfa5151f5549 SHA512 e3aaf4ede1efe4b5b578d6d739cc6cb3bc202a39c4ae8f9ccad6400b9d307d79565c0c14e487668d98ab9d9da2c7b61cc3e8762b7f2dc059c1a88ca2067dc9f3 WHIRLPOOL 3432da54b401d0d6370c316d71e8a6c6e14b70af0bcbba7510170adf32f1eca4612f3372faf00137f01174aa507b7d2819d21dc1923db24715051fdc2090ee2b
+MISC ChangeLog 524 SHA256 d6a7522021e73abc88632d9abdd66215bcf45f2c78509929f5d58f8f5bb08d02 SHA512 912de8b8927bac33ce87929c5b6f6ad17ce0cb77f4e4e24e69245f560392f8506f8ae718a8480ccf747e0338b7827a6b5d5b7ccc1af54d99f5c460d84a9661d8 WHIRLPOOL 11d1013e92f1aa840e6b3c5413fbff215d6915ba963d8f82e70cf6e8bb1fba0fb01939d2179085e337117281a4d1137ed91fea6f086385dc63ce658f7524616f
 MISC metadata.xml 161 SHA256 03133f1c99f9897289d97dc74a0ccc9b0a8138838507982422de997be1910a54 SHA512 105dfa237851f1eaa24a51b58404cc2dd4c96e5ae29dc602aa10fe916c2b8af6e6272ac89e7e1352d64e38799f38a293eebf488843490417657e94c3e751f5c8 WHIRLPOOL e2af9fd199381669706b1ddf6bc2db7a9019b6acdb1422a8f2ee8311705c819c120e87df08901c7865b37c916540862ff1d207773541d848ece41eb03e8a3d0b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlKSTtsACgkQG9wOWsQutdYo/AP/Q4A2vBnbuxxYbIxnODux+q6t
+UIvmDMbu2WqH93yuaMJIcaXPY4vnVk3cRJiE1bseJOLWB/LQLQ/X6zfH0YOj6yOR
+/XCwS68TFUGSkkt38kwiQCNAooMsjmO/O2iV6SbmsXgwRq6leNKqddblcs+0w0YJ
+Pp86H072G6S3tamah34=
+=FOzR
+-----END PGP SIGNATURE-----
