@@ -1,6 +1,9 @@
 # ChangeLog for virtual/perl-Exporter
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Exporter/ChangeLog,v 1.1 2013/09/05 05:37:38 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Exporter/ChangeLog,v 1.2 2013/11/24 19:04:16 zlogene Exp $
+
+  24 Nov 2013; Mikle Kolyada <zlogene@gentoo.org> perl-Exporter-5.680.0.ebuild:
+  provide alternative dependencies wrt bug #490524
 
 *perl-Exporter-5.680.0 (05 Sep 2013)
 
