@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/json-c
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/json-c/ChangeLog,v 1.30 2013/11/24 10:56:48 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/json-c/ChangeLog,v 1.31 2013/11/24 19:07:39 pacho Exp $
+
+  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> json-c-0.11.ebuild:
+  amd64 stable, bug #492238
 
 *json-c-0.11-r1 (24 Nov 2013)
 
